--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,8 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "prettier/prettier": "error",
+    "react/prop-types": "off",
+    "react/jsx-props-no-spreading": "off",
     "react-hooks/exhaustive-deps": "warn",
     "no-use-before-define": "off",
     "react/jsx-filename-extension": [
