--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "react-hooks/rules-of-hooks": "error",
     "prettier/prettier": "error",
     "react/prop-types": "off",
+    "@typescript-eslint/ban-types": "off",
     "no-underscore-dangle": "off",
     "react/jsx-props-no-spreading": "off",
     "react-hooks/exhaustive-deps": "warn",
