--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "prettier/prettier": "error",
+    "import/no-duplicates": "off",
     "react/prop-types": "off",
     "camelcase": "off",
     "react/jsx-one-expression-per-line": "off",
