--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     "import/no-duplicates": "off",
     "react/prop-types": "off",
     "camelcase": "off",
+    "no-useless-return": "off",
     "react/jsx-one-expression-per-line": "off",
     "@typescript-eslint/ban-types": "off",
     "no-underscore-dangle": "off",
